--- a/src/content/myJourney.module.css
+++ b/src/content/myJourney.module.css
@@ -1,28 +1,3 @@
-.header {
-  text-align: center;
-  font-weight: 500;
-}
-
-.headerContent {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 40px;
-}
-
-.line {
-  height: 0.2rem;
-  width: 8rem;
-  background-color: black;
-  margin: 0 1rem;
-}
-
-.workExperienceContainer {
-  display: flex;
-  align-items: center;
-  margin: 2rem 20rem 4rem 20rem;
-}
-
 .companyImage {
   width: 8rem;
   height: 8rem;
@@ -66,4 +41,23 @@
   font-size: 15px;
   text-align: justify;
   text-align-last: left;
+}
+
+.workExperienceContainer {
+  display: flex;
+  align-items: center;
+  width: 80%;
+  margin: 2rem auto;
+}
+
+@media (max-width: 768px) {
+  .workExperienceContainer {
+    flex-direction: column;
+    margin: 1rem auto;
+  }
+
+  .companyImage {
+    width: 50%;
+    margin-bottom: 1rem;
+  }
 }
