seperating prod and local, styling changes

--- a/web/src/content/contactInfo.module.css
+++ b/web/src/content/contactInfo.module.css
@@ -63,7 +63,8 @@
 
 /* Contact Me Form */
 .contactMeForm {
-  border: 1px solid #25d366;
+  border: 1px solid gray;
+  border-radius: 20px;
   display: flex;
   align-items: center;
   width: 60%;
@@ -140,7 +141,7 @@
 }
 
 .inputBox {
-  border: 1px solid black;
+  border: 1px solid gray;
   border-radius: 5px;
   display: flex;
   align-items: center;
