--- a/web/src/components/contentContainer.module.css
+++ b/web/src/components/contentContainer.module.css
@@ -1,4 +1,5 @@
-.companyImage {
+/* contentContainer */
+.image {
   width: 8rem;
   height: 8rem;
   object-fit: cover;
@@ -12,7 +13,7 @@
   justify-content: space-between;
 }
 
-.companyName {
+.name {
   font-size: 30px;
   margin: 0;
   margin-bottom: 0.5rem;
@@ -43,7 +44,7 @@
   text-align-last: left;
 }
 
-.workExperienceContainer {
+.contentContainer {
   display: flex;
   align-items: center;
   width: 80%;
@@ -51,13 +52,45 @@
 }
 
 @media (max-width: 768px) {
-  .workExperienceContainer {
+  .contentContainer {
     flex-direction: column;
     margin: 1rem auto;
   }
 
-  .companyImage {
+  .image {
     width: 50%;
     margin-bottom: 1rem;
   }
+}
+
+/* header and subHeader */
+.header {
+  text-align: center;
+  font-weight: 600;
+}
+
+.headerContent {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 40px;
+}
+
+.line {
+  height: 0.2rem;
+  width: 8rem;
+  background-color: black;
+  margin: 0 1rem;
+}
+
+.subHeader {
+  text-align: center;
+  font-weight: 500;
+}
+
+.subHeaderContent {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
 }
