--- a/web/src/content/contactInfo.module.css
+++ b/web/src/content/contactInfo.module.css
@@ -22,6 +22,14 @@
   white-space: nowrap;
 }
 
+.moreLinks {
+  font-weight: 500;
+  text-align: center;
+  color: black;
+  font-size: 20px;
+  margin-bottom: 1rem;
+}
+
 .reference {
   font-weight: 500;
   font-style: normal;
