--- a/web/src/components/contentContainer.module.css
+++ b/web/src/components/contentContainer.module.css
@@ -95,3 +95,21 @@
   justify-content: center;
   font-size: 20px;
 }
+
+.link {
+  text-align: center;
+  margin-top: 5px;
+}
+
+.linkToGitHub {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.skills {
+  font-weight: 600;
+}
+
+.skillsColor {
+  color: grey;
+}
